Fix spacing between header and about section

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,7 @@
 header {
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 5rem;
+    padding-bottom: 3rem;
     overflow: hidden;
 }
 
@@ -16,7 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 70%;
+    min-height: 70%;
 }
 
 .header__text {
